working on scss stuff

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,9 +10,13 @@
 
 <ion-content padding>
 
-  <h3>Welcome Home and Hello World and whatnot!</h3>
+  <h3 text-uppercase>Welcome Home and Hello World and whatnot!</h3>
   <p>
-    <button ion-button color="primary" menuToggle>Toggle Menu</button>
-  </p>
-
+    <button ion-button color="spursGreen" menuToggle>Toggle Manu</button>
+  </p> 
+  <hr>
+  <div float-right>
+    <p>Some text that should automatically go to the right side of the DOM.</p>
+  </div>
+  <br><br>
 </ion-content>
