--- a/src/pages/new-shit/new-shit.html
+++ b/src/pages/new-shit/new-shit.html
@@ -8,7 +8,10 @@
 </ion-header>
 
 <ion-content>
-  <h3>
+  <h3 text-color="dark">
     New Shit
   </h3>
+  <button ion-button color="spursOrange">
+    This is an Orange button
+  </button>
 </ion-content>
