changed pallete and played around throughout app

--- a/src/pages/new-shit/new-shit.html
+++ b/src/pages/new-shit/new-shit.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="secondary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -7,11 +7,15 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="newShitContent">
   <h3 text-color="dark">
     New Shit
   </h3>
-  <button ion-button color="spursOrange">
-    This is an Orange button
+  <div class="oneDiv" padding>One Div</div>
+  <div padding text-color="primary">Two Div</div>
+  <div padding>Red Div</div>
+  <div padding>Blue Div</div>
+  <button ion-button color="danger">
+    This is an orange button
   </button>
 </ion-content>
