--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="secondary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -7,9 +7,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="listContent">
   <ion-list>
-    <button color="spursPink" ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
+    <button color="primary" ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
       <ion-icon name="{{item.icon}}" item-left></ion-icon>
       {{item.title}}
       <div class="item-note" item-right>
