added footer and started adding nba api

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,4 +22,9 @@
     <p padding class="pTag">Some text that should automatically go to the right side of the DOM.</p>
   </div>
   <br><br>
+  <ion-footer>
+    <ion-toolbar color="secondary">
+      <ion-title><a href="http://www.matthewlarsondev.com/">matthewlarsonDev</a></ion-title>
+    </ion-toolbar>
+  </ion-footer>
 </ion-content>
