working on footer

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,7 +24,8 @@
   <br><br>
   <ion-footer>
     <ion-toolbar color="secondary">
-      <ion-title><a href="http://www.matthewlarsondev.com/">matthewlarsonDev</a></ion-title>
+      <ion-title text-nowrap><a href="http://www.matthewlarsondev.com/">matthewlarsonDev</a></ion-title>
+      <ion-title text-nowrap><a href="https://github.com/mlars84">GitHub</a></ion-title>
     </ion-toolbar>
   </ion-footer>
 </ion-content>
